updated to try and fix card alignment

--- a/bambi-laravel/public/css/shop.css
+++ b/bambi-laravel/public/css/shop.css
@@ -8,6 +8,14 @@
   width: 1920px;
 }
 
+
+.grid-container {
+
+  display: grid;
+}
+
+
+
 .shop .bambi-shoes-logo-text {
   height: 60px;
   margin-left: 327px;
